// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders not visible snackbar with content wrapper but no actual content 1`] = `null`;

exports[`renders snackbar with Text as a child 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      Object {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": undefined,
        "backgroundColor": "rgb(243, 237, 246)",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 4,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": 8,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="undefined-outer-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(243, 237, 246)",
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderRadius": 4,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="undefined-inner-layer"
    >
      <View
        accessibilityLiveRegion="polite"
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "backgroundColor": "rgba(49, 48, 51, 1)",
            "borderBottomEndRadius": undefined,
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderBottomStartRadius": undefined,
            "borderRadius": 4,
            "borderTopEndRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderTopStartRadius": undefined,
            "flex": undefined,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginHorizontal": 16,
              "marginVertical": 14,
            }
          }
        >
          <View>
            <Text>
              Snackbar content
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with View & Text as a child 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      Object {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": undefined,
        "backgroundColor": "rgb(243, 237, 246)",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 4,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": 8,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="undefined-outer-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(243, 237, 246)",
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderRadius": 4,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="undefined-inner-layer"
    >
      <View
        accessibilityLiveRegion="polite"
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "backgroundColor": "rgba(49, 48, 51, 1)",
            "borderBottomEndRadius": undefined,
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderBottomStartRadius": undefined,
            "borderRadius": 4,
            "borderTopEndRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderTopStartRadius": undefined,
            "flex": undefined,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginHorizontal": 16,
              "marginVertical": 14,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#ef9a9a",
                    "padding": 15,
                  }
                }
              />
              <Text
                style={
                  Object {
                    "color": "#ffffff",
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "marginLeft": 10,
                  }
                }
              >
                Error Message which is veryyyyyyyyyyyy longggggggg Error Message which is veryyyyyyyyyyyy longggggggg
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with action button 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      Object {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": undefined,
        "backgroundColor": "rgb(243, 237, 246)",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 4,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": 8,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="undefined-outer-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(243, 237, 246)",
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderRadius": 4,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="undefined-inner-layer"
    >
      <View
        accessibilityLiveRegion="polite"
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "backgroundColor": "rgba(49, 48, 51, 1)",
            "borderBottomEndRadius": undefined,
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderBottomStartRadius": undefined,
            "borderRadius": 4,
            "borderTopEndRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderTopStartRadius": undefined,
            "flex": undefined,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
              Object {
                "writingDirection": "ltr",
              },
              Array [
                Object {
                  "flex": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 14,
                },
                Object {
                  "color": "rgba(244, 239, 244, 1)",
                },
              ],
            ]
          }
        >
          Snackbar content
        </Text>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "minHeight": 48,
              },
              Object {
                "marginLeft": -12,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "alignSelf": undefined,
                "backgroundColor": "rgba(0, 0, 0, 0)",
                "borderBottomEndRadius": undefined,
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderBottomStartRadius": undefined,
                "borderRadius": 20,
                "borderTopEndRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "borderTopStartRadius": undefined,
                "bottom": undefined,
                "end": undefined,
                "flex": undefined,
                "left": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": 4,
                "marginRight": 8,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "start": undefined,
                "top": undefined,
              }
            }
            testID="undefined-outer-layer"
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0)",
                  "borderBottomEndRadius": undefined,
                  "borderBottomLeftRadius": undefined,
                  "borderBottomRightRadius": undefined,
                  "borderBottomStartRadius": undefined,
                  "borderRadius": 20,
                  "borderTopEndRadius": undefined,
                  "borderTopLeftRadius": undefined,
                  "borderTopRightRadius": undefined,
                  "borderTopStartRadius": undefined,
                  "flex": undefined,
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="undefined-inner-layer"
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderBottomEndRadius": undefined,
                    "borderBottomLeftRadius": undefined,
                    "borderBottomRightRadius": undefined,
                    "borderBottomStartRadius": undefined,
                    "borderColor": "transparent",
                    "borderRadius": 20,
                    "borderStyle": "solid",
                    "borderTopEndRadius": undefined,
                    "borderTopLeftRadius": undefined,
                    "borderTopRightRadius": undefined,
                    "borderTopStartRadius": undefined,
                    "borderWidth": 0,
                    "flex": undefined,
                    "minWidth": 64,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      false,
                      Object {
                        "borderRadius": 20,
                      },
                    ]
                  }
                  testID="button"
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          Object {
                            "textAlign": "left",
                          },
                          Object {
                            "writingDirection": "ltr",
                          },
                          Array [
                            Object {
                              "marginHorizontal": 16,
                              "marginVertical": 9,
                              "textAlign": "center",
                            },
                            false,
                            Object {
                              "marginHorizontal": 12,
                            },
                            false,
                            false,
                            Object {
                              "color": "rgba(208, 188, 255, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      Undo
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with content 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      },
      Object {
        "paddingBottom": 34,
        "paddingHorizontal": 0,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": undefined,
        "backgroundColor": "rgb(243, 237, 246)",
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderRadius": 4,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": 8,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.15,
        "shadowRadius": 6,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="undefined-outer-layer"
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(243, 237, 246)",
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderRadius": 4,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 2,
        }
      }
      testID="undefined-inner-layer"
    >
      <View
        accessibilityLiveRegion="polite"
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "backgroundColor": "rgba(49, 48, 51, 1)",
            "borderBottomEndRadius": undefined,
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderBottomStartRadius": undefined,
            "borderRadius": 4,
            "borderTopEndRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "borderTopStartRadius": undefined,
            "flex": undefined,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 48,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "400",
                "letterSpacing": 0.25,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
              Object {
                "writingDirection": "ltr",
              },
              Array [
                Object {
                  "flex": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 14,
                },
                Object {
                  "color": "rgba(244, 239, 244, 1)",
                },
              ],
            ]
          }
        >
          Snackbar content
        </Text>
      </View>
    </View>
  </View>
</View>
`;
